--- a/frontend/sass/index.css
+++ b/frontend/sass/index.css
@@ -33,10 +33,10 @@ header h1 {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  block-size: block;
   width: 100%;
+  display: grid;
+  grid-template-rows: repeat(5, minmax(min-content, max-content));
+  grid-template-areas: "accounts accounts" "transactions summary" "transactions summary" "filter filter" "table table";
   padding-top: 2.3rem;
   padding-bottom: 2rem;
   padding-left: 4rem;
@@ -48,6 +48,7 @@ main .accountsContainer {
   align-items: center;
   justify-content: flex-end;
   margin-bottom: 2rem;
+  grid-area: accounts;
 }
 main .accountsContainer #accountForm {
   display: flex;
@@ -80,13 +81,9 @@ main .accountsContainer #accountForm button:hover {
   background-color: #1e7e5c;
 }
 main .summaryAccounts {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
+  grid-area: summary;
 }
 main .summaryAccounts ul {
-  width: 39%;
   display: flex;
   flex-direction: column;
 }
@@ -121,7 +118,6 @@ main h1 {
 }
 main .accountsInfo {
   display: flex;
-  width: 39%;
   height: 5.5vh;
   justify-content: space-between;
   margin-top: 1rem;
@@ -143,6 +139,7 @@ main .accountsInfo .accountBalance {
 
 .transactionsContainer {
   margin-bottom: 2rem;
+  grid-area: transactions;
 }
 .transactionsContainer #transactionsForm .typeTransactions {
   display: flex;
@@ -254,6 +251,7 @@ main .accountsInfo .accountBalance {
 table {
   margin-top: 1rem;
   width: 100%;
+  grid-area: table;
 }
 table tbody {
   width: 100%;
@@ -287,6 +285,7 @@ table tbody .transactionsInfo td {
 
 .filters {
   display: flex;
+  grid-area: filter;
 }
 .filters h3 {
   margin-right: 0.5rem;
