--- a/frontend/sass/index.scss
+++ b/frontend/sass/index.scss
@@ -34,10 +34,14 @@ header {
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    block-size: block;
+    // display: flex;
+    // flex-direction: column;
+    // block-size: block;
     width: 100%;
+    display: grid;
+    // grid-template-columns: repeat(2, minmax(min-content, max-content));
+    grid-template-rows: repeat(5, minmax(min-content, max-content));
+    grid-template-areas: "accounts accounts" "transactions summary" "transactions summary" "filter filter" "table table";
 
     padding: {
         top: 2.3rem;
@@ -52,6 +56,7 @@ main {
         align-items: center;
         justify-content: flex-end;
         margin-bottom: 2rem;
+        grid-area: accounts;
         #accountForm {
             display: flex;
             align-items: center;
@@ -94,12 +99,13 @@ main {
         }
     }
     .summaryAccounts {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-end;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: center;
+        // align-items: flex-end;
+        grid-area: summary;
         ul{
-            width: 39%;
+            // width: 39%;
             display: flex;
             flex-direction: column;
 
@@ -140,7 +146,7 @@ main {
         }
         .accountsInfo{
             display: flex;
-            width: 39%;
+            // width: 39%;
             height: 5.5vh;
             justify-content: space-between;
             margin-top: 1rem;
@@ -162,6 +168,7 @@ main {
     }
     .transactionsContainer {
         margin-bottom: 2rem;
+        grid-area: transactions;
         #transactionsForm {
             .typeTransactions {
                 display: flex;
@@ -300,6 +307,7 @@ main {
     table {
         margin-top: 1rem;
         width: 100%;
+        grid-area: table;
         
         tbody {
             width: 100%;
@@ -339,6 +347,7 @@ main {
     }
     .filters{
         display: flex;
+        grid-area: filter;
         h3{
             margin-right: 0.5rem;
         }
